--- a/.github/workflows/s3sync.yml
+++ b/.github/workflows/s3sync.yml
@@ -13,27 +13,12 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
         
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: Yarn Install
-      run: |
-        yarn install
-    - name: Production Build
-      run: |
-        yarn build
-    - name: Unit Tests
-      run: |
-        yarn test
-    - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --delete
+        args: --acl public-read --follow-symlinks --size-only --exclude '.git/*' --exclude '.github/*' --exclude 'data/*'
       env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "build"
+        SOURCE_DIR: 'src'   
