--- a/.github/workflows/s3sync.yml
+++ b/.github/workflows/s3sync.yml
@@ -1,24 +1,38 @@
-name: Production Build
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
 on:
-  pull_request:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:
-      - master
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  # This workflow contains a single job called "build"
+  deploy:
+    # The type of runner that the job will run on
+    name: Upload to Amazon S3
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-        
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read --follow-symlinks --size-only --exclude '.git/*' --exclude '.github/*' --exclude 'data/*'
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        SOURCE_DIR: 'src'   
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          'aws-access-key-id': ${{ secrets.AWS_ACCESS_KEY_ID }}
+          'aws-secret-access-key': ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          'aws-region': us-east-2
+        
+      - name: Copy files to the test website with the AWS CLI
+        run: |
+          aws s3 sync . s3://workflowbucket1
